samples/_failures_safe/1761354356_ac6f72_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_e124d06c.c: In function ‘main’:
./samples/SAFE/__tmp_e124d06c.c:155:22: error: expected ‘;’ at end of input
  155 |     for (int i = 0; i
      |                      ^
      |                      ;
./samples/SAFE/__tmp_e124d06c.c:155:5: error: expected declaration or statement at end of input
  155 |     for (int i = 0; i
      |     ^~~
